--- a/lib/media_web/templates/layout/app.html.eex
+++ b/lib/media_web/templates/layout/app.html.eex
@@ -25,6 +25,10 @@
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= @inner_content %>
+       <%= form_for @conn, Media.Helpers.router().media_path(@conn, :upload), [as: "upload", multipart: :true], fn f -> %>
+        <%= file_input f, :file, accept: "image/*" %>
+        <button class="btn btn-primary" type="submit">Upload</button>
+      <% end %>
     </main>
   </body>
 </html>
