--- a/lib/media_web/templates/layout/app.html.eex
+++ b/lib/media_web/templates/layout/app.html.eex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Media · Phoenix Framework</title>
-    <link rel="stylesheet" href="<%= Media.Helpers.router().static_path(@conn, "/css/media.css") %>" />
+    <link rel="stylesheet" href="<%= Helpers.router().static_path(@conn, "/css/media.css") %>" />
     <%# <script defer type="text/javascript" src="<%= env(:router).static_path(@conn, "/js/app.js") %>"></script> %>
   </head>
   <body>
@@ -14,7 +14,7 @@
         <nav role="navigation">
           <ul>
             <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          
+
           </ul>
         </nav>
         <a href="https://phoenixframework.org/" class="phx-logo">
@@ -25,7 +25,7 @@
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= @inner_content %>
-       <%= form_for @conn, Media.Helpers.router().media_path(@conn, :upload), [as: "upload", multipart: :true], fn f -> %>
+       <%= form_for @conn, Helpers.router().media_path(@conn, :upload), [as: "upload", multipart: :true], fn f -> %>
         <%= file_input f, :file, accept: "image/*" %>
         <button class="btn btn-primary" type="submit">Upload</button>
       <% end %>
